fixed bio image height for iPhone, corrected spacing on nav bar

--- a/src/views/Home/style.css
+++ b/src/views/Home/style.css
@@ -34,6 +34,7 @@
 
 #avatar {
   width: 200px;
+  height: 200px;
   margin-bottom: 1rem;
   background-color: #d45f15;
   border: 8px solid #d45f15;
